Реализованны команда !Ответ
!Ответ "текст"

--- a/WhatMovieToday/WhatMovieToday.csproj
+++ b/WhatMovieToday/WhatMovieToday.csproj
@@ -47,7 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AnswerBase\Answers.cs" />
-    <Compile Include="AnswerBase\ParserFromTxt.cs" />
+    <Compile Include="AnswerBase\WorkerForTxt.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
